Fix Telegram button link in index.html

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ body{
         </div>
 
         <div class="controls" role="group" aria-label="social links">
-          <button class="btn" id="tgBtn" data-link="https://t.me//Franciszw" aria-label="telegram">
+          <button class="btn" id="tgBtn" data-link="https://t.me/Franciszw" aria-label="telegram">
             <svg viewBox="0 0 24 24" fill="none" width="22" height="22"><path d="M3 11l18-8-8 18-2-7-8-3z" fill="#000"/></svg>
           </button>
 
