Replace button with anchor for Telegram link

--- a/index.html
+++ b/index.html
@@ -205,11 +205,13 @@ body{
           </div>
         </div>
 
-        <div class="controls" role="group" aria-label="social links">
-          <button class="btn" id="tgBtn" data-link="https://t.me/Franciszw" aria-label="telegram">
-            <svg viewBox="0 0 24 24" fill="none" width="22" height="22"><path d="M3 11l18-8-8 18-2-7-8-3z" fill="#000"/></svg>
-          </button>
-
+        <a href="https://t.me/Franciszw" target="_blank" rel="noopener noreferrer">
+  <button class="btn" aria-label="telegram">
+    <svg viewBox="0 0 24 24" fill="none" width="22" height="22">
+      <path d="M3 11l18-8-8 18-2-7-8-3z" fill="#000"/>
+    </svg>
+  </button>
+</a>
           <div style="flex:1"></div>
 
           <div class="level-badge" id="xpPreview">+0 XP</div>
