Implement link opening functionality on button click
Add click event listener to open a link in a new tab.

--- a/index.html
+++ b/index.html
@@ -449,4 +449,10 @@ body{
 })();
 </script>
 </body>
+  <script>
+document.getElementById("tgBtn").addEventListener("click", function () {
+    const url = this.dataset.link;
+    window.open(url, "_blank");
+});
+</script>
 </html>
